--- a/SduDigitalForm/SduDigitalForm.csproj
+++ b/SduDigitalForm/SduDigitalForm.csproj
@@ -18,11 +18,18 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SduDigitalForm.Business\SduDigitalForm.Business.csproj" />
     <ProjectReference Include="..\SduDigitalForm.Data\SduDigitalForm.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\TeknikServisTalepFormu\Data\" />
   </ItemGroup>
 
 </Project>
